# openalex-pygui

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: python-publish.yml  rtd-publish.yml  test.yml
docs/: mkdocs.yml
docs/docs/: api-reference.md  bibtex.md  getting-started.md  index.md  library.md  search.md  settings.md
docs/site/: 404.html  index.html  objects.inv  sitemap.xml
docs/site/api-reference/: index.html
docs/site/bibtex/: index.html
docs/site/getting-started/: index.html
docs/site/search/: index.html  search_index.json
docs/site/settings/: index.html
src/openalex_pygui/: __init__.py  api.py  db.py  main.py  utils.py
